# hdlio

./: .gitignore  AGENTS.md  CLAUDE.md
.codex/: config.toml  ecc-install-state.json  hooks.json
baselines/tools/livox_customsg_to_pointcloud2/: CMakeLists.txt  package.xml
baselines/tools/livox_customsg_to_pointcloud2/src/: converter_node.cpp
baselines/tools/livox_v2_to_v1_republish/: CMakeLists.txt  package.xml
baselines/tools/livox_v2_to_v1_republish/launch/: republish.launch
baselines/tools/livox_v2_to_v1_republish/src/: republish_node.cpp
docker/: Dockerfile  analyze_baseline.py  (+96 more)
src/livox_ros_driver/: CMakeLists.txt  package.xml
src/livox_ros_driver2/: CMakeLists.txt  package.xml
src/tof_slam/: CMakeLists.txt  package.xml  rviz_plugin.xml
src/tof_slam/config/: avia.yaml  base_reference.md  mid360.yaml  ntu.yaml  tofslam.rviz
src/tof_slam/include/tof_slam/backend/: loop_closure_manager.hpp  loop_detector.hpp  map_saver.hpp  pgo_convergence_monitor.hpp  pgo_debug_logger.hpp  place_recognition.hpp  pose_graph.hpp  submap.hpp
src/tof_slam/include/tof_slam/common/: config.hpp  math_utils.hpp  plane_fitting.hpp  se3.hpp  types.hpp
src/tof_slam/include/tof_slam/common/lie/: se3.hpp  so3.hpp
src/tof_slam/include/tof_slam/common/types/: imu_types.hpp  point_types.hpp  state.hpp
src/tof_slam/include/tof_slam/frontend/diag/: boundary_hash.hpp  prescan_trace.hpp  ringbuf_trace.hpp  upstream_trace.hpp
src/tof_slam/include/tof_slam/frontend/estimator/: anisotropic_iekf.hpp  correspondence.hpp  correspondence_finder.hpp  diagnostics_monitor.hpp  fixed_lag_smoother.hpp  gravity_init.hpp  iekf_updater.hpp  imu_preintegration.hpp  imu_propagator.hpp  lidar_jacobian.hpp  lio_estimator.hpp  motion_undistort.hpp
src/tof_slam/include/tof_slam/frontend/filter/: range_filter.hpp  stride_filter.hpp  voxel_grid.hpp
src/tof_slam/include/tof_slam/frontend/map/: point_voxel_map.hpp  surfel_map.hpp  voxel_key.hpp
src/tof_slam/include/tof_slam/frontend/policy/: scene_classifier.hpp
src/tof_slam/include/tof_slam/frontend/robust/: pko.hpp
src/tof_slam/include/tof_slam/frontend_w/estimator/: lwo_estimator.hpp  lwo_iekf_updater.hpp  lwo_state.hpp  wheel_propagator.hpp
src/tof_slam/include/tof_slam/frontend_w/measurement/: ground_constraint.hpp  wheel_measurement.hpp
src/tof_slam/include/tof_slam/mapping/: center_voxel_filter.hpp  hilbert.hpp  hknn_tables.hpp  ivox_map.hpp  keyframe_manager.hpp  map_aligner.hpp  occupancy_grid.hpp  octvox_map.hpp
src/tof_slam/include/tof_slam/ros/: backend_runner.hpp  csv_logger.hpp  imu_adapter.hpp  param_loader.hpp  point_cloud_adapter.hpp  slam_node.hpp  state_publisher.hpp
src/tof_slam/include/tof_slam/ros1/: imu_adapter.hpp  imu_preprocessor.hpp  livox_custom_msg_adapter.hpp  point_cloud_adapter.hpp  slam_node.hpp  tof_preprocessor.hpp
src/tof_slam/include/tof_slam/ros2/: imu_adapter.hpp  point_cloud_adapter.hpp  slam_node.hpp
src/tof_slam/include/tof_slam/rviz/: save_map_panel.hpp
src/tof_slam/include/tof_slam/sensors/: imu_preprocessor.hpp  tof_preprocessor.hpp  wheel_prior_builder.hpp
src/tof_slam/launch/ros1/: tofslam_m3dgr.launch  tofslam_ntu_viral.launch
src/tof_slam/launch/ros2/: lwo_magok_caffe_launch.py  tofslam_m3dgr_launch.py  tofslam_nrx_chj_launch.py
src/tof_slam/scripts/: nrx_odom_converter.py  run_lc_all.sh  run_lc_validation.sh  run_map_save_test.sh  run_ogm_test.sh  run_reval_rate4_nolc.sh  run_single_test.sh
src/tof_slam/src/: tofslam_main.cpp
src/tof_slam/src/backend/: loop_closure_manager.cpp  loop_detector.cpp  map_saver.cpp  pgo_convergence_monitor.cpp  pgo_debug_logger.cpp  place_recognition.cpp  pose_graph.cpp
src/tof_slam/src/common/: plane_fitting.cpp  se3.cpp
src/tof_slam/src/common/lie/: se3.cpp  so3.cpp
src/tof_slam/src/common/types/: state.cpp
src/tof_slam/src/frontend/estimator/: correspondence_finder.cpp  fixed_lag_smoother.cpp  gravity_init.cpp  iekf_updater.cpp  imu_preintegration.cpp  imu_propagator.cpp  lidar_jacobian.cpp  lio_estimator.cpp  motion_undistort.cpp
src/tof_slam/src/frontend/filter/: voxel_grid.cpp
src/tof_slam/src/frontend/map/: point_voxel_map.cpp  surfel_map.cpp
src/tof_slam/src/frontend/policy/: scene_classifier.cpp
src/tof_slam/src/frontend/robust/: pko.cpp
src/tof_slam/src/frontend_w/estimator/: lwo_estimator.cpp  lwo_iekf_updater.cpp  lwo_state.cpp  wheel_propagator.cpp
src/tof_slam/src/frontend_w/measurement/: ground_constraint.cpp  wheel_measurement.cpp
src/tof_slam/src/mapping/: ivox_map.cpp  keyframe_manager.cpp  map_aligner.cpp  occupancy_grid.cpp
src/tof_slam/src/ros/: backend_runner.cpp  csv_logger.cpp  imu_adapter.cpp  param_loader.cpp  point_cloud_adapter.cpp  slam_node.cpp  state_publisher.cpp
src/tof_slam/src/ros1/: imu_adapter.cpp  imu_preprocessor.cpp  livox_custom_msg_adapter.cpp  main.cpp  point_cloud_adapter.cpp  slam_node.cpp  tof_preprocessor.cpp
src/tof_slam/src/ros2/: imu_adapter.cpp  imu_preprocessor.cpp  main.cpp  point_cloud_adapter.cpp  slam_node.cpp  tof_preprocessor.cpp
src/tof_slam/src/rviz/: save_map_panel.cpp
src/tof_slam/src/sensors/: imu_preprocessor.cpp  tof_preprocessor.cpp  wheel_prior_builder.cpp
src/tof_slam/test/common/lie/: se3_test.cpp  so3_test.cpp
src/tof_slam/test/common/types/: point_types_test.cpp  state_test.cpp
src/tof_slam/test/frontend/diag/: boundary_hash_test.cpp
src/tof_slam/test/frontend/estimator/: anisotropic_iekf_test.cpp  correspondence_finder_test.cpp  gravity_init_test.cpp  iekf_updater_test.cpp  imu_propagator_test.cpp  lidar_jacobian_test.cpp  lio_estimator_test.cpp  motion_undistort_test.cpp
src/tof_slam/test/frontend/filter/: filter_test.cpp
src/tof_slam/test/frontend/map/: surfel_map_test.cpp
src/tof_slam/test/frontend/robust/: pko_test.cpp
src/tof_slam/test/frontend_w/estimator/: lwo_state_test.cpp  wheel_propagator_test.cpp
src/tof_slam/test/frontend_w/measurement/: ground_constraint_test.cpp
src/tof_slam/test/ros/: imu_adapter_test.cpp  point_cloud_adapter_test.cpp
src/tof_slam/test/ros2/: imu_adapter_test.cpp  point_cloud_adapter_test.cpp
(+326 files in other folders)
