<?xml version="1.0"?>
<package format="2">
  <name>tof_slam</name>
  <version>5.0.0</version>
  <description>TofSLAM: LiDAR-Inertial Odometry SLAM (ROS 1 Noetic)</description>

  <maintainer email="tofslam@example.com">TofSLAM Authors</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>livox_ros_driver2</depend>
</package>
